Prevent the sequence picker dropdown from being clipped at the bottom
By moving it up if necessary.

Fixes https://app.asana.com/0/143752588714644/525849836318357/f.

--- a/assets/widgets.css
+++ b/assets/widgets.css
@@ -8,11 +8,10 @@
   width: 320px;
   background-color: white;
   z-index: 1;
-  top: 8px;
   left: 0;
   overflow: hidden;
   border-radius: 2px;
-  box-shadow: 0 1px 15px 1px rgba(10, 15, 20, 0.35);
+  /* Note: `top` and `box-shadow` set as inline styles for reasons of positioning. */
   opacity: 0;
   pointer-events: none;
 }
